# QMLforArtemisIV

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  research_protocol.md
configs/: compute_budget.yaml  constraints.yaml  crew_schedule.yaml  dynamics.yaml  gmat_earth_j2.cof  human_acceleration_limits.yaml  phase1_benchmark.yaml  post_gate5_d011_c1_launcher_correction.yaml  post_gate5_d011_c2_hash_correction.yaml  post_gate5_d012_future_protocol_discussion.yaml  post_gate5_d013_classical_first_protocol.yaml  post_gate5_d014_classical_first_freeze.yaml  post_gate5_d015_implementation_synthetic_validation.yaml  post_gate5_d016_c1_a02_compute_preflight.yaml  post_gate5_d016_classical_compute_preflight.yaml  post_gate5_d017_classical_first_development.yaml  post_gate5_d018_interpretation.yaml  post_gate5_d019_safety_redesign.yaml  post_gate5_d020_recall_first_freeze.yaml  post_gate5_d021_recall_first_synthetic.yaml  post_gate5_d022_recall_first_preflight.yaml  post_gate5_d023_recall_first_development.yaml  post_gate5_d024_recall_first_interpretation.yaml  post_gate5_d025_gate6_recommendation.yaml  post_gate5_d026_manuscript_synthesis.yaml  post_gate5_d027_manuscript_results.yaml  post_gate5_d028_release_support_cards.yaml  post_gate5_d029_reproducibility_audit.yaml  post_gate5_d030_reproducibility_correction.yaml  post_gate5_d031_claim_release_review.yaml  post_gate5_d032_release_candidate_manifest.yaml  post_gate5_d033_release_acceptance.yaml  post_gate5_d034_prqk.yaml  post_gate5_d035_cfqsr.yaml  post_gate5_d036_tapqk.yaml  post_gate5_d037_tsqr.yaml  post_gate5_d038_gfrk.yaml  post_gate5_d039_ecgfrk.yaml  post_gate5_d040_cegfrk.yaml  post_gate5_d041_c1_performance_correction.yaml  (+18 more)
data/: artemis2_event_registry.csv  public_source_checksums.csv  source_registry.csv
docs/: ai_editor_handoff_manifest.md  computational_methodology.md  decision_log.md  final_claim_release_review.md  gate2_data_numeric_freeze.md  gate3_simulator_credibility.md  gate4_phase1_freeze.md  gate5_closure_gate6_recommendation.md  (+62 more)
(+468 files in other folders)
