[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openqfuel-cislunar"
version = "0.3.0"
description = "Open benchmark for classical and quantum ML in crew-constrained cislunar trajectory correction planning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jplephem>=2.22",
  "numpy>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.9,<2",
  "scipy>=1.13",
]

license = { text = "Apache-2.0" }
authors = [
  { name = "OpenQFuel-Cislunar Contributors" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
figures = ["matplotlib>=3.8"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-subtests>=0.13",
]

[project.urls]
Repository = "https://github.com/taechasith/QMLforArtemisIV"

[tool.setuptools.packages.find]
where = ["src"]
